environments/dev/orders-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
        - name: orders-api
          image: ghcr.io/therealdavidbour/orders-api:0f2e1e99c1b92f6af59c610f006263604cd5db12
          ports:
            - containerPort: 8001
