environments/dev/orders-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: dev
spec:
  selector:
    app: orders-api
  ports:
    - port: 80
      targetPort: 8001
