environments/dev/orders-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-api
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: orders-api.10-0-0-200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 80
